seedboxk8s/applications/headlamp/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Headlamp
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: headlamp
    gethomepage.dev/href: https://headlamp.${productionClusterFqdn}
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: headlamp
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
